<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_controllers</name>
  <version>2.0.1</version>
  <description>ROS package for open_manipulator_controllers</description>
  <license>Apache 2.0</license>

  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/open_manipulator_controllers</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugin.xml" />
  </export>
</package>
