<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_controls</name>
  <version>2.0.1</version>
  <description>ROS packages for open_manipulator_controls</description>
  <license>Apache 2.0</license>

  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/open_manipulator_controls</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_controllers</exec_depend>
  <exec_depend>open_manipulator_hw</exec_depend>
  <exec_depend>open_manipulator_moveit_config</exec_depend>
  <export><metapackage/></export>
</package>
